# TabQ

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: train.sh  ui.sh
src/: __init__.py
src/config/: __init__.py  arguments_image.py  arguments_ocr.py  constants.py
src/dataset/: __init__.py  base_dataset.py  img_ltx_pair_dataset.py  query_dataset.py
src/infer/: __init__.py  tabq.py
src/model/: __init__.py  configuration_tabq.py  modeling_tabq.py  processing_tabq.py
src/train/: __init__.py  train_ocr.py  train_qa_image.py  train_tabq.py
src/ui/: __init__.py  tabq.py
src/utils/: __init__.py  format_util.py  log_util.py  metric.py
